# AerialCarDetector

./: .gitignore  CMakeLists.txt  main.cpp
include/: inference.h
src/: inference.cpp
